--- a/swda-ci/swda/config/environments/swda.common.yml
+++ b/swda-ci/swda/config/environments/swda.common.yml
@@ -26,6 +26,9 @@
     # registry
     CICD_VT_PULL_REGISTRIES: 'secret/sys/cicd/docker-registries/hslu-shared-devops secret/edu/cicd/docker-registries/hslu-edu'
 
+    # deploy default
+    CICD_VT_DEFAULT_CD_TARGET: secret/edu/apps/bsc-it/swda/cicd/hosts/swda-g99
+
 id_tokens:
   CICD_VAULT_JWT:
     aud: https://vault.sys.hslu-rnd.ch/
