added default CD target

--- a/swda-ci/swda/java.ci.yml
+++ b/swda-ci/swda/java.ci.yml
@@ -33,14 +33,14 @@ site:
     - !reference [.filterFastCI, rules]
     - !reference [.filterBuild, rules]
 
-depcheck:
-  extends:
-    - .job
-    - .depcheck
-  stage: test
-  rules:
-    - !reference [.filterFastCI, rules]
-    - !reference [.filterBuild, rules]
+#depcheck:
+#  extends:
+#    - .job
+#    - .depcheck
+#  stage: test
+#  rules:
+#    - !reference [.filterFastCI, rules]
+#    - !reference [.filterBuild, rules]
 
 pages:
   extends:
