--- a/swda-ci/templates/ci/java.yml
+++ b/swda-ci/templates/ci/java.yml
@@ -5,11 +5,12 @@ include:
       - /templates/common/scripts.yml
 
 default:
-  image: $CICD_DEVOPS_PATH/ci-agents/maven:3.9.6-temurin-21
+  image: $CICD_DEVOPS_PATH/ci-agents/maven:3.9.9-temurin-21
 
 variables:
     MAVEN_CLI_OPTS: "--batch-mode"
     MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
+    CICD_VT_DEFAULT_CD_TARGET: secret/edu/apps/bsc-it/swda/cicd/hosts/swda-g99
 
 .javaJob:
   tags:
