--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -18,16 +18,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ch.hslu.swda24fs.g99</groupId>
-    <artifactId>g99-gateway-sample</artifactId>
+    <groupId>ch.hslu.swda24fs.g02</groupId>
+    <artifactId>g02-gateway-service</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>g99-gateway-sample</name>
+    <name>g02-gateway-service</name>
     <description>
         (Gateway-)Microservice basierend auf micronaut.io in Modul SWDA für Gruppe g99.
     </description>
-    <url>https://gitlab.switch.ch/${scm.group.name}/g99/${project.artifactId}</url>
+    <url>https://gitlab.switch.ch/${scm.group.name}/g02/${project.artifactId}</url>
 
     <organization>
         <name>Hochschule Luzern - Informatik</name>
