renaming template values

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 micronaut:
     application:
-        name: gateway-sample
+        name: gateway-service
     server:
         port: 8090
     router:
