--- a/gateway-template/stack.deploy.yml
+++ b/gateway-template/stack.deploy.yml
@@ -19,7 +19,7 @@ services:
       replicas: 1
       labels:
         - "traefik.enable=true"
-        - "traefik.http.routers.${CICD_STACK_NAME}App.rule=Host(`gw.${TLD}`)"
+        - "traefik.http.routers.${CICD_STACK_NAME}App.rule=Host(`gw-template.${TLD}`)"
         - "traefik.http.services.${CICD_STACK_NAME}App.loadbalancer.server.port=8090"
         - 'traefik.http.routers.${CICD_STACK_NAME}App.entrypoints=websecure'
         - 'traefik.http.routers.${CICD_STACK_NAME}App.tls.certresolver=letsencrypt'
