--- a/store-management-service/stack.build.yml
+++ b/store-management-service/stack.build.yml
@@ -9,3 +9,10 @@ services:
       args:
         CI_GIT_VERSION: $CICD_GIT_VERSION
         CI_GIT_DATE: $CICD_GIT_DATE
+  db:
+    image: mysql:latest
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: store_management
+    networks :
+      - bus
