add mysql-viewer service

--- a/backbone/stack.local.yml
+++ b/backbone/stack.local.yml
@@ -54,6 +54,16 @@ services:
       - backbone
       - demo
 
+  mysql-viewer:
+    image: adminer:latest
+    networks:
+      - backbone
+    ports:
+      - "8080:8080"
+    restart: always
+
+
+
 ##############################################
 # Demo Stack                                 #
 # you can remove these services if you want  #
