--- a/swda-ci/swda/java.ci.yml
+++ b/swda-ci/swda/java.ci.yml
@@ -2,7 +2,7 @@ include:
   - project: hslu/shared/devops/cicd
     ref: v5-stable
     file:
-      - /edu/config/config.yml
+      - /edu/workflow/default/workflow.yml
       - /templates/ci/dkc.yml
   - /swda/config/config.yml
   - /templates/ci/java.yml
