Implement environment variables to access db

--- a/log-service/stack.deploy.yml
+++ b/log-service/stack.deploy.yml
@@ -12,6 +12,7 @@ services:
     image: $CICD_IMAGE_ID
     environment:
       - RMQ_HOST=bus
+      - MONGO_URI=mongodb://mongodb:27017
     networks:
       - bus
       # - ingress
