Add app to internal network

--- a/log-service/stack.deploy.yml
+++ b/log-service/stack.deploy.yml
@@ -15,6 +15,7 @@ services:
       - MONGO_URI=mongodb://mongodb:27017
     networks:
       - bus
+      - internal
       # - ingress
     deploy:
       replicas: 1
