initial_feature_set init

--- a/central-warehouse-service/pom.xml
+++ b/central-warehouse-service/pom.xml
@@ -231,7 +231,12 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
     <dependencies>
+        <dependency>
+            <groupId>ch.hslu.swda</groupId>
+            <artifactId>swda_stock</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.rabbitmq</groupId>
             <artifactId>amqp-client</artifactId>
