--- a/customer-management-service/stack.deploy.yml
+++ b/customer-management-service/stack.deploy.yml
@@ -5,6 +5,7 @@ networks:
   bus:
     name: bus
     external: true
+  internal:
 
 services:
   app:
@@ -13,6 +14,7 @@ services:
       - RMQ_HOST=bus
     networks:
       - bus
+      - internal
       # - ingress
     deploy:
       replicas: 1
@@ -22,3 +24,10 @@ services:
       #   - "traefik.http.services.${CICD_STACK_NAME}App.loadbalancer.server.port=8080"
       #   - 'traefik.http.routers.${CICD_STACK_NAME}App.entrypoints=websecure'
       #   - 'traefik.http.routers.${CICD_STACK_NAME}App.tls.certresolver=letsencrypt'
+  mongodb:
+    image: cr.gitlab.switch.ch/hslu/shared/devops/docker-cache/bitnami/mongodb:4.2.19
+    restart: always
+    ports:
+      - '27017:27017'
+    networks:
+      - internal
