--- a/authentication-service/pom.xml
+++ b/authentication-service/pom.xml
@@ -127,6 +127,9 @@
         <micrometer.version>4.8.1</micrometer.version>
         <rabbitmq.version>5.22.0</rabbitmq.version>
         <testcontainers.version>1.20.2</testcontainers.version>
+
+        <mongodb-driver-sync.version>4.5.1</mongodb-driver-sync.version>
+        <morphia-core.version>2.2.6</morphia-core.version>
     </properties>
 
     <dependencyManagement>
@@ -279,6 +282,16 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>junit-jupiter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>${mongodb-driver-sync.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>dev.morphia.morphia</groupId>
+            <artifactId>morphia-core</artifactId>
+            <version>${morphia-core.version}</version>
         </dependency>
     </dependencies>
 
