--- a/central-warehouse-service/stack.deploy.yml
+++ b/central-warehouse-service/stack.deploy.yml
@@ -6,6 +6,9 @@ networks:
     name: bus
     external: true
 
+  central_warehouse:
+    name:central_warehouse
+
 services:
   app:
     image: $CICD_IMAGE_ID
@@ -22,3 +25,13 @@ services:
       #   - "traefik.http.services.${CICD_STACK_NAME}App.loadbalancer.server.port=8080"
       #   - 'traefik.http.routers.${CICD_STACK_NAME}App.entrypoints=websecure'
       #   - 'traefik.http.routers.${CICD_STACK_NAME}App.tls.certresolver=letsencrypt'
+
+  db:
+    image: mysql:latest
+    restart: always
+    networks:
+      - central_warehouse
+    environment:
+    volumes:
+      - /var/lib/mysql
+      - ./config/mysql/central_warehouse.sql:/docker-entrypoint-initdb.d/central_warehouse.sql
