--- a/central-warehouse-service/stack.build.yml
+++ b/central-warehouse-service/stack.build.yml
@@ -9,3 +9,5 @@ services:
       args:
         CI_GIT_VERSION: $CICD_GIT_VERSION
         CI_GIT_DATE: $CICD_GIT_DATE
+    environment:
+      - BUILD_SERVER=true
