Add jbcrypt dependency

--- a/authentication-service/pom.xml
+++ b/authentication-service/pom.xml
@@ -293,6 +293,11 @@
             <artifactId>morphia-core</artifactId>
             <version>${morphia-core.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
     </dependencies>
 
     <build>
