try with forced build for each compose up start

--- a/central-warehouse-service/stack.deploy.yml
+++ b/central-warehouse-service/stack.deploy.yml
@@ -33,12 +33,12 @@ services:
       #   - 'traefik.http.routers.${CICD_STACK_NAME}App.tls.certresolver=letsencrypt'
 
   central_warehouse_db:
-    image: mysql:latest
+    build:
+      context: ./config/mysql/
     restart: always
     networks:
       - central_warehouse
     environment:
       MYSQL_ROOT_PASSWORD: root
     volumes:
-      #- /var/lib/mysql
-      - ./config/mysql/central_warehouse.sql:/docker-entrypoint-initdb.d/central_warehouse.sql
+      - /var/lib/mysql
