--- a/central-warehouse-service/stack.local.yml
+++ b/central-warehouse-service/stack.local.yml
@@ -7,8 +7,7 @@ networks:
 
 services:
   db1:
-    build:
-      context: ./config/mysql/
+    image: mysql:latest
     restart: always
     networks:
       - central_warehouse
@@ -16,6 +15,7 @@ services:
       MYSQL_ROOT_PASSWORD: root
     volumes:
       - /var/lib/mysql
+      - ./config/mysql/central_warehouse.sql:/docker-entrypoint-initdb.d/central_warehouse.sql
 
   central_warehouse:
     image: swda-24hs/central-warehouse-service:latest
