--- a/central-warehouse-service/stack.deploy.yml
+++ b/central-warehouse-service/stack.deploy.yml
@@ -33,8 +33,7 @@ services:
       #   - 'traefik.http.routers.${CICD_STACK_NAME}App.tls.certresolver=letsencrypt'
 
   central_warehouse_db:
-    build:
-      context: ./config/mysql/
+    image: central_warehouse_custom_mysql:latest
     restart: always
     networks:
       - central_warehouse
