add volume descriptor in compose file

--- a/central-warehouse-service/stack.deploy.yml
+++ b/central-warehouse-service/stack.deploy.yml
@@ -8,7 +8,9 @@ networks:
 
   central_warehouse:
     name: central_warehouse
-
+volumes:
+  central-warehouse-db-data:
+    
 services:
   app:
     image: $CICD_IMAGE_ID
