Add the csv files to the container that they run as well in a docker container

--- a/article-registry-service/Dockerfile
+++ b/article-registry-service/Dockerfile
@@ -6,5 +6,9 @@ ARG CI_GIT_DATE
 RUN echo "$CI_GIT_VERSION,$CI_GIT_DATE" > version.txt
 COPY ./target/service.jar service.jar
 
+# Add CSV files
+COPY ./books.csv books.csv
+COPY ./prices.csv prices.csv
+
 # Startup
 CMD java ${JAVA_OPTS} -jar ./service.jar
