add stack.deploy database and start implementing connection to gateway

--- a/accounting-service/stack.deploy.yml
+++ b/accounting-service/stack.deploy.yml
@@ -5,14 +5,17 @@ networks:
   bus:
     name: bus
     external: true
+  internal:
 
 services:
   app:
     image: $CICD_IMAGE_ID
     environment:
       - RMQ_HOST=bus
+      - MONGO_URI=mongodb://mongodb:27017
     networks:
       - bus
+      - internal
       # - ingress
     deploy:
       replicas: 1
@@ -22,3 +25,15 @@ services:
       #   - "traefik.http.services.${CICD_STACK_NAME}App.loadbalancer.server.port=8080"
       #   - 'traefik.http.routers.${CICD_STACK_NAME}App.entrypoints=websecure'
       #   - 'traefik.http.routers.${CICD_STACK_NAME}App.tls.certresolver=letsencrypt'
+  mongodb:
+    image: cr.gitlab.switch.ch/hslu/shared/devops/docker-cache/bitnami/mongodb:4.2.19
+    restart: always
+    ports:
+      - '27030:27017'
+    networks:
+      - internal
+    volumes:
+      - accounting-db:/bitnami/mongodb
+
+volumes:
+  accounting-db:
